# hayate

./: .gitignore  README.md  bench.py  benchmark.py  config.py  engine.py  main.py  model.py  pyproject.toml  sampler.py
engine/: engine.py
hayate/: __init__.py  config.py  loader.py  model.py  utils.py
hayate/engine/: engine.py
hayate/model/: attention.py  block.py  cache.py  qwen.py  rope.py
model/: __init__.py  attention.py  block.py  cache.py  linear.py  qwen.py  rope.py
scripts/: generate.py  verify_phase1.py
