[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hayate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "transformers>=4.51.0",
    "safetensors",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
